--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,4 @@
 .sport-link, .sport-link:hover {color: #fff; text-decoration: none;}
+.blog-nav{background-color: #428BCA;}
+.is-sticky .blog-nav{background-color: red; left:0; padding-left: 2.2%!important; width:100%!important; z-index: 1;}
+
