--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 .sport-link, .sport-link:hover {color: #fff; text-decoration: none;}
 .blog-nav{background-color: #428BCA;}
-.is-sticky .blog-nav{background-color: red; left:0; padding-left: 2.2%!important; width:100%!important; z-index: 1;}
+.is-sticky .blog-nav{background-color: red; left: 0; width:100%!important; z-index: 1;}
+
 
